--- a/package.json
+++ b/package.json
@@ -4,15 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
-    "markdown-it-mathjax3": "^4.3.2",
+    "markdown-it-katex": "^2.0.3",
     "vitepress": "^1.0.0-alpha.43"
   },
   "scripts": {
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:serve": "vitepress serve docs"
-  },
-  "dependencies": {
-    "markdown-it-katex": "^2.0.3"
   }
 }
